@@ -18,10 +18,13 @@
 package org.apache.cassandra.index.sai.disk.v1;
 
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.nio.ByteBuffer;
-import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.ForkJoinPool;
+import java.util.Set;
+import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
@@ -32,26 +35,31 @@ import com.google.common.annotations.VisibleForTesting;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import io.github.jbellis.jvector.pq.ProductQuantization;
+import org.apache.cassandra.concurrent.DebuggableThreadPoolExecutor;
+import org.apache.cassandra.concurrent.NamedThreadFactory;
 import org.apache.cassandra.db.marshal.AbstractType;
 import org.apache.cassandra.index.sai.IndexContext;
 import org.apache.cassandra.index.sai.analyzer.AbstractAnalyzer;
 import org.apache.cassandra.index.sai.analyzer.ByteLimitedMaterializer;
 import org.apache.cassandra.index.sai.disk.PostingList;
 import org.apache.cassandra.index.sai.disk.RAMStringIndexer;
-import org.apache.cassandra.index.sai.disk.format.IndexDescriptor;
-import org.apache.cassandra.index.sai.disk.io.BytesRefUtil;
+import org.apache.cassandra.index.sai.disk.format.IndexComponentType;
+import org.apache.cassandra.index.sai.disk.format.Version;
+import org.apache.cassandra.index.sai.disk.format.IndexComponents;
 import org.apache.cassandra.index.sai.disk.v1.kdtree.BKDTreeRamBuffer;
 import org.apache.cassandra.index.sai.disk.v1.kdtree.NumericIndexWriter;
 import org.apache.cassandra.index.sai.disk.v1.trie.InvertedIndexWriter;
 import org.apache.cassandra.index.sai.disk.vector.CassandraOnHeapGraph;
+import org.apache.cassandra.index.sai.disk.vector.CompactionGraph;
 import org.apache.cassandra.index.sai.utils.NamedMemoryLimiter;
 import org.apache.cassandra.index.sai.utils.PrimaryKey;
 import org.apache.cassandra.index.sai.utils.TypeUtil;
 import org.apache.cassandra.metrics.QuickSlidingWindowReservoir;
+import org.apache.cassandra.utils.bytecomparable.ByteComparable;
+import org.apache.cassandra.utils.bytecomparable.ByteSourceInverse;
 import org.apache.lucene.util.BytesRef;
-import org.apache.lucene.util.BytesRefBuilder;
 
-import static org.apache.cassandra.index.sai.disk.vector.CassandraOnHeapGraph.InvalidVectorBehavior.IGNORE;
 import static org.apache.cassandra.utils.FBUtilities.busyWaitWhile;
 
 /**
@@ -66,6 +74,13 @@ public abstract class SegmentBuilder
 {
     private static final Logger logger = LoggerFactory.getLogger(SegmentBuilder.class);
 
+    /** for parallelism within a single compaction */
+    public static final ExecutorService compactionExecutor = new DebuggableThreadPoolExecutor(Runtime.getRuntime().availableProcessors(),
+                                                                                              1,
+                                                                                              TimeUnit.MINUTES,
+                                                                                              new ArrayBlockingQueue<>(10 * Runtime.getRuntime().availableProcessors()),
+                                                                                              new NamedThreadFactory("SegmentBuilder", Thread.MIN_PRIORITY));
+
     // Served as safe net in case memory limit is not triggered or when merger merges small segments..
     public static final long LAST_VALID_SEGMENT_ROW_ID = ((long)Integer.MAX_VALUE / 2) - 1L;
     private static long testLastValidSegmentRowId = -1;
@@ -75,6 +90,8 @@ public abstract class SegmentBuilder
 
     /** Minimum flush size, dynamically updated as segment builds are started and completed/aborted. */
     private static volatile long minimumFlushBytes;
+
+    protected final IndexComponents.ForWrite components;
 
     final AbstractType<?> termComparator;
 
@@ -99,12 +116,18 @@ public abstract class SegmentBuilder
     private PrimaryKey minKey;
     private PrimaryKey maxKey;
     // in termComparator order
-    private ByteBuffer minTerm;
-    private ByteBuffer maxTerm;
+    protected ByteBuffer minTerm;
+    protected ByteBuffer maxTerm;
 
-    private final AtomicInteger updatesInFlight = new AtomicInteger(0);
-    private final QuickSlidingWindowReservoir termSizeReservoir = new QuickSlidingWindowReservoir(100);
+    protected final AtomicInteger updatesInFlight = new AtomicInteger(0);
+    protected final QuickSlidingWindowReservoir termSizeReservoir = new QuickSlidingWindowReservoir(100);
     protected AtomicReference<Throwable> asyncThrowable = new AtomicReference<>();
+
+
+    public boolean requiresFlush()
+    {
+        return false;
+    }
 
     public static class KDTreeSegmentBuilder extends SegmentBuilder
     {
@@ -112,17 +135,16 @@ public abstract class SegmentBuilder
         private final BKDTreeRamBuffer kdTreeRamBuffer;
         private final IndexWriterConfig indexWriterConfig;
 
-        KDTreeSegmentBuilder(long rowIdOffset, AbstractType<?> termComparator, NamedMemoryLimiter limiter, IndexWriterConfig indexWriterConfig)
+        KDTreeSegmentBuilder(IndexComponents.ForWrite components, long rowIdOffset, NamedMemoryLimiter limiter, IndexWriterConfig indexWriterConfig)
         {
-            super(rowIdOffset, termComparator, limiter);
+            super(components, rowIdOffset, limiter);
 
             int typeSize = TypeUtil.fixedSizeOf(termComparator);
             this.kdTreeRamBuffer = new BKDTreeRamBuffer(1, typeSize);
             this.buffer = new byte[typeSize];
             this.indexWriterConfig = indexWriterConfig;
             totalBytesAllocated = kdTreeRamBuffer.ramBytesUsed();
-            totalBytesAllocatedConcurrent.add(totalBytesAllocated);
-        }
+            totalBytesAllocatedConcurrent.add(totalBytesAllocated);}
 
         public boolean isEmpty()
         {
@@ -136,10 +158,9 @@ public abstract class SegmentBuilder
         }
 
         @Override
-        protected SegmentMetadata.ComponentMetadataMap flushInternal(IndexDescriptor indexDescriptor, IndexContext indexContext) throws IOException
+        protected SegmentMetadata.ComponentMetadataMap flushInternal() throws IOException
         {
-            try (NumericIndexWriter writer = new NumericIndexWriter(indexDescriptor,
-                                                                    indexContext,
+            try (NumericIndexWriter writer = new NumericIndexWriter(components,
                                                                     TypeUtil.fixedSizeOf(termComparator),
                                                                     maxSegmentRowId,
                                                                     rowCount,
@@ -148,21 +169,27 @@ public abstract class SegmentBuilder
                 return writer.writeAll(kdTreeRamBuffer.asPointValues());
             }
         }
+
+        @Override
+        public boolean requiresFlush()
+        {
+            return kdTreeRamBuffer.requiresFlush();
+        }
     }
 
     public static class RAMStringSegmentBuilder extends SegmentBuilder
     {
         final RAMStringIndexer ramIndexer;
+        private final ByteComparable.Version byteComparableVersion;
 
-        final BytesRefBuilder stringBuffer = new BytesRefBuilder();
-
-        RAMStringSegmentBuilder(long rowIdOffset, AbstractType<?> termComparator, NamedMemoryLimiter limiter)
+        RAMStringSegmentBuilder(IndexComponents.ForWrite components, long rowIdOffset, NamedMemoryLimiter limiter)
         {
-            super(rowIdOffset, termComparator, limiter);
-
-            ramIndexer = new RAMStringIndexer(termComparator);
+            super(components, rowIdOffset, limiter);
+            this.byteComparableVersion = components.byteComparableVersionFor(IndexComponentType.TERMS_DATA);
+            ramIndexer = new RAMStringIndexer();
             totalBytesAllocated = ramIndexer.estimatedBytesUsed();
             totalBytesAllocatedConcurrent.add(totalBytesAllocated);
+
         }
 
         public boolean isEmpty()
@@ -172,29 +199,47 @@ public abstract class SegmentBuilder
 
         protected long addInternal(ByteBuffer term, int segmentRowId)
         {
-            BytesRefUtil.copyBufferToBytesRef(term, stringBuffer);
-            return ramIndexer.add(stringBuffer.get(), segmentRowId);
+            var encodedTerm = components.version().onDiskFormat().encodeForTrie(term, termComparator);
+            // Use the source term to estimate the length of the array we'll need. This is unlikely to be exact, but
+            // it will hopefully prevent intermediate array creation as ByteSourceInverse consumes the ByteSource.
+            // This 5% addition was added as a guess, and could possibly be improved.
+            var estimatedLength = Math.round(term.remaining() * 1.05f);
+            var bytes = ByteSourceInverse.readBytes(encodedTerm.asComparableBytes(byteComparableVersion), estimatedLength);
+            var bytesRef = new BytesRef(bytes);
+            return ramIndexer.add(bytesRef, segmentRowId);
         }
 
         @Override
-        protected SegmentMetadata.ComponentMetadataMap flushInternal(IndexDescriptor indexDescriptor, IndexContext indexContext) throws IOException
+        protected SegmentMetadata.ComponentMetadataMap flushInternal() throws IOException
         {
-            try (InvertedIndexWriter writer = new InvertedIndexWriter(indexDescriptor,
-                                                                      indexContext))
+            try (InvertedIndexWriter writer = new InvertedIndexWriter(components))
             {
-                return writer.writeAll(ramIndexer.getTermsWithPostings());
+                return writer.writeAll(ramIndexer.getTermsWithPostings(minTerm, maxTerm));
             }
+        }
+
+        @Override
+        public boolean requiresFlush()
+        {
+            return ramIndexer.requiresFlush();
         }
     }
 
-    public static class VectorSegmentBuilder extends SegmentBuilder
+    public static class VectorOffHeapSegmentBuilder extends SegmentBuilder
     {
-        private final CassandraOnHeapGraph<Integer> graphIndex;
+        private final CompactionGraph graphIndex;
 
-        public VectorSegmentBuilder(long rowIdOffset, AbstractType<?> termComparator, NamedMemoryLimiter limiter, IndexWriterConfig indexWriterConfig)
+        public VectorOffHeapSegmentBuilder(IndexComponents.ForWrite components, long rowIdOffset, long keyCount, NamedMemoryLimiter limiter, ProductQuantization pq, boolean unitVectors)
         {
-            super(rowIdOffset, termComparator, limiter);
-            graphIndex = new CassandraOnHeapGraph<>(termComparator, indexWriterConfig, false);
+            super(components, rowIdOffset, limiter);
+            try
+            {
+                graphIndex = new CompactionGraph(components, pq, unitVectors, keyCount);
+            }
+            catch (IOException e)
+            {
+                throw new UncheckedIOException(e);
+            }
             totalBytesAllocated = graphIndex.ramBytesUsed();
             totalBytesAllocatedConcurrent.add(totalBytesAllocated);
         }
@@ -208,17 +253,151 @@ public abstract class SegmentBuilder
         @Override
         protected long addInternal(ByteBuffer term, int segmentRowId)
         {
-            return graphIndex.add(term, segmentRowId, IGNORE);
+            throw new UnsupportedOperationException();
         }
 
         @Override
-        protected SegmentMetadata.ComponentMetadataMap flushInternal(IndexDescriptor indexDescriptor, IndexContext indexContext) throws IOException
+        protected long addInternalAsync(ByteBuffer term, int segmentRowId)
+        {
+            // CompactionGraph splits adding a node into two parts:
+            // (1) maybeAddVector, which must be done serially because it writes to disk incrementally
+            // (2) addGraphNode, which may be done asynchronously
+            CompactionGraph.InsertionResult result;
+            try
+            {
+                result = graphIndex.maybeAddVector(term, segmentRowId);
+            }
+            catch (IOException e)
+            {
+                throw new UncheckedIOException(e);
+            }
+            if (result.vector == null)
+                return result.bytesUsed;
+
+            updatesInFlight.incrementAndGet();
+            compactionExecutor.submit(() -> {
+                try
+                {
+                    long bytesAdded = result.bytesUsed + graphIndex.addGraphNode(result);
+                    totalBytesAllocatedConcurrent.add(bytesAdded);
+                    termSizeReservoir.update(bytesAdded);
+                }
+                catch (Throwable th)
+                {
+                    asyncThrowable.compareAndExchange(null, th);
+                }
+                finally
+                {
+                    updatesInFlight.decrementAndGet();
+                }
+            });
+            // bytes allocated will be approximated immediately as the average of recently added terms,
+            // rather than waiting until the async update completes to get the exact value.  The latter could
+            // result in a dangerously large discrepancy between the amount of memory actually consumed
+            // and the amount the limiter knows about if the queue depth grows.
+            busyWaitWhile(() -> termSizeReservoir.size() == 0 && asyncThrowable.get() == null);
+            if (asyncThrowable.get() != null) {
+                throw new RuntimeException("Error adding term asynchronously", asyncThrowable.get());
+            }
+            return (long) termSizeReservoir.getMean();
+        }
+
+        @Override
+        protected SegmentMetadata.ComponentMetadataMap flushInternal() throws IOException
+        {
+            return graphIndex.flush(Set.of());
+        }
+
+        @Override
+        public boolean supportsAsyncAdd()
+        {
+            return true;
+        }
+
+        @Override
+        public boolean requiresFlush()
+        {
+            return graphIndex.requiresFlush();
+        }
+
+        @Override
+        long release(IndexContext indexContext)
+        {
+            try
+            {
+                graphIndex.close();
+            }
+            catch (IOException e)
+            {
+                throw new UncheckedIOException(e);
+            }
+            return super.release(indexContext);
+        }
+    }
+
+    public static class VectorOnHeapSegmentBuilder extends SegmentBuilder
+    {
+        private final CassandraOnHeapGraph<Integer> graphIndex;
+
+        public VectorOnHeapSegmentBuilder(IndexComponents.ForWrite components, long rowIdOffset, long keyCount, NamedMemoryLimiter limiter)
+        {
+            super(components, rowIdOffset, limiter);
+            graphIndex = new CassandraOnHeapGraph<>(components.context(), false);
+            totalBytesAllocated = graphIndex.ramBytesUsed();
+            totalBytesAllocatedConcurrent.add(totalBytesAllocated);
+        }
+
+        @Override
+        public boolean isEmpty()
+        {
+            return graphIndex.isEmpty();
+        }
+
+        @Override
+        protected long addInternal(ByteBuffer term, int segmentRowId)
+        {
+            return graphIndex.add(term, segmentRowId);
+        }
+
+        @Override
+        protected long addInternalAsync(ByteBuffer term, int segmentRowId)
+        {
+            updatesInFlight.incrementAndGet();
+            compactionExecutor.submit(() -> {
+                try
+                {
+                    long bytesAdded = addInternal(term, segmentRowId);
+                    totalBytesAllocatedConcurrent.add(bytesAdded);
+                    termSizeReservoir.update(bytesAdded);
+                }
+                catch (Throwable th)
+                {
+                    asyncThrowable.compareAndExchange(null, th);
+                }
+                finally
+                {
+                    updatesInFlight.decrementAndGet();
+                }
+            });
+            // bytes allocated will be approximated immediately as the average of recently added terms,
+            // rather than waiting until the async update completes to get the exact value.  The latter could
+            // result in a dangerously large discrepancy between the amount of memory actually consumed
+            // and the amount the limiter knows about if the queue depth grows.
+            busyWaitWhile(() -> termSizeReservoir.size() == 0 && asyncThrowable.get() == null);
+            if (asyncThrowable.get() != null) {
+                throw new RuntimeException("Error adding term asynchronously", asyncThrowable.get());
+            }
+            return (long) termSizeReservoir.getMean();
+        }
+
+        @Override
+        protected SegmentMetadata.ComponentMetadataMap flushInternal() throws IOException
         {
             // VSTODO this is a bit of a hack. We call computeDeletedOrdinals to call computeRowIds on each
             // VectorPostings, which will populate the rowIds field, but if we refactor the code, we could skip that.
             var deletedOrdinals = graphIndex.computeDeletedOrdinals(p -> p);
             assert deletedOrdinals.isEmpty() : "Deleted ordinals should be empty when built during compaction";
-            return graphIndex.writeData(indexDescriptor, indexContext, Collections.emptySet());
+            return graphIndex.flush(components, Set.of());
         }
 
         @Override
@@ -228,9 +407,10 @@ public abstract class SegmentBuilder
         }
     }
 
-    private SegmentBuilder(long rowIdOffset, AbstractType<?> termComparator, NamedMemoryLimiter limiter)
+    private SegmentBuilder(IndexComponents.ForWrite components, long rowIdOffset, NamedMemoryLimiter limiter)
     {
-        this.termComparator = termComparator;
+        this.components = components;
+        this.termComparator = components.context().getValidator();
         this.limiter = limiter;
         this.segmentRowIdOffset = rowIdOffset;
         this.lastValidSegmentRowID = testLastValidSegmentRowId >= 0 ? testLastValidSegmentRowId : LAST_VALID_SEGMENT_ROW_ID;
@@ -238,18 +418,18 @@ public abstract class SegmentBuilder
         minimumFlushBytes = limiter.limitBytes() / ACTIVE_BUILDER_COUNT.getAndIncrement();
     }
 
-    public SegmentMetadata flush(IndexDescriptor indexDescriptor, IndexContext indexContext) throws IOException
+    public SegmentMetadata flush() throws IOException
     {
         assert !flushed;
         flushed = true;
 
         if (getRowCount() == 0)
         {
-            logger.warn(indexContext.logMessage("No rows to index during flush of SSTable {}."), indexDescriptor.descriptor);
+            logger.warn(components.logMessage("No rows to index during flush of SSTable {}."), components.descriptor());
             return null;
         }
 
-        SegmentMetadata.ComponentMetadataMap indexMetas = flushInternal(indexDescriptor, indexContext);
+        SegmentMetadata.ComponentMetadataMap indexMetas = flushInternal();
 
         return new SegmentMetadata(segmentRowIdOffset, rowCount, minSSTableRowId, maxSSTableRowId, minKey, maxKey, minTerm, maxTerm, indexMetas);
     }
@@ -281,8 +461,9 @@ public abstract class SegmentBuilder
         minKey = minKey == null ? key : minKey;
         maxKey = key;
 
-        minTerm = TypeUtil.min(term, minTerm, termComparator);
-        maxTerm = TypeUtil.max(term, maxTerm, termComparator);
+        // Note that the min and max terms are not encoded.
+        minTerm = TypeUtil.min(term, minTerm, termComparator, Version.latest());
+        maxTerm = TypeUtil.max(term, maxTerm, termComparator, Version.latest());
 
         rowCount++;
 
@@ -302,31 +483,9 @@ public abstract class SegmentBuilder
         return bytesAllocated;
     }
 
-    private long addInternalAsync(ByteBuffer term, int segmentRowId)
+    protected long addInternalAsync(ByteBuffer term, int segmentRowId)
     {
-        updatesInFlight.incrementAndGet();
-        ForkJoinPool.commonPool().submit(() -> {
-            try
-            {
-                long bytesAdded = addInternal(term, segmentRowId);
-                totalBytesAllocatedConcurrent.add(bytesAdded);
-                termSizeReservoir.update(bytesAdded);
-            }
-            catch (Throwable th)
-            {
-                asyncThrowable.compareAndExchange(null, th);
-            }
-            finally
-            {
-                updatesInFlight.decrementAndGet();
-            }
-        });
-        // bytes allocated will be approximated immediately as the average of recently added terms,
-        // rather than waiting until the async update completes to get the exact value.  The latter could
-        // result in a dangerously large discrepancy between the amount of memory actually consumed
-        // and the amount the limiter knows about if the queue depth grows.
-        busyWaitWhile(() -> termSizeReservoir.size() == 0);
-        return (long) termSizeReservoir.getMean();
+        throw new UnsupportedOperationException();
     }
 
     public boolean supportsAsyncAdd() {
@@ -389,7 +548,7 @@ public abstract class SegmentBuilder
 
     protected abstract long addInternal(ByteBuffer term, int segmentRowId);
 
-    protected abstract SegmentMetadata.ComponentMetadataMap flushInternal(IndexDescriptor indexDescriptor, IndexContext indexContext) throws IOException;
+    protected abstract SegmentMetadata.ComponentMetadataMap flushInternal() throws IOException;
 
     int getRowCount()
     {
